frontend/tests/cases/negative/interfaces/kind-mismatch/instanceFreeVarAppVarMismatched.gr
interface Mismatch a b

-- 'a' cannot have both kind 'Type' and kind 'K(b) -> Type'
instance Mismatch (a b) a
